--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "service_reviews_db",
-    "host": "mysql_service_review",
+    "password": "fcgcA325cbF1H5F43BFD6GHge34EAhAa",
+    "database": "railway",
+    "host": "viaduct.proxy.rlwy.net",
     "dialect": "mysql"
   },
   "test": {
